# kazo

./: .env.example  .gitignore  .ralphrc  Dockerfile  README.md  docker-compose.yml  fix_plan.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
.ralph/: .circuit_breaker_state  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralph/specs/: conversational-mode.md  testing-strategy.md
kazo/: __main__.py  categories.py  config.py  currency.py  logging.py  main.py
kazo/charts/: __init__.py  templates.py
kazo/claude/: client.py
kazo/db/: database.py  models.py
kazo/handlers/: budget.py  categories.py  common.py  currencies.py  export.py  items.py  pending.py  receipts.py  subscriptions.py  summary.py
kazo/prompts/: classify_intent.txt  classify_photo.txt  edit_expense.txt  identify_products.txt  parse_expense.txt  parse_product_prices.txt  parse_receipt.txt
kazo/services/: budget_service.py  currency_service.py  expense_service.py  subscription_service.py  summary_service.py
tests/: conftest.py  test_budget.py  test_categories.py  test_claude_client.py  test_currency_service.py  test_database.py  test_edit_expense.py  test_expense_items.py  test_expense_notes.py  test_expense_service.py  test_export.py  test_health_check.py  test_intent_classifier.py  test_item_queries.py  test_logging.py  test_pending.py  test_rate_limit.py  test_receipts.py  test_subscription_service.py  test_summary_service.py  test_text_items.py
