[project]
name = "kazo"
version = "0.1.0"
description = "Family finance Telegram bot"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "numpy>=2.0",
    "plotly>=6.0",
    "kaleido>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
