[project]
name = "kazo"
version = "0.1.0"
description = "Family finance Telegram bot"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "numpy>=2.0",
    "plotly>=6.0",
    "kaleido>=0.4",
    "anthropic>=0.77.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
